Fixed Contact page spacing

--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,18 @@ nav li {
   padding-bottom: 2rem;
 }
 
+.sect-Contact {
+  background: rgba(100, 171, 223, 0.5);
+  text-align: center;
+  position: absolute;
+  margin: 2rem 2rem;
+  left: 0;
+  right: 0;
+  border-radius: 10px;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .meImage {
   flex-basis: 40%;
 }
